CHANGES.txt - 2009-05-11
------------------------

CHANGES IN CUPS V1.4b3

	- Documentation fixes (STR #3044, STR #3057)
	- Added complete localizations for German, Japanese, Polish, and
	  Russian and partial localizations for Chinese, Danish, Finnish,
	  French, Italian, Korean, Norwegian, Portuguese, and Swedish
	  (STR #3096, STR #3098, STR #3109, STR #3111, STR #3141)
	- The EPSON 24-pin series driver should now feed the correct amount
	  (STR #2624)
	- The scheduler now automatically logs the last N debug messages for
	  failed print jobs.
	- You can now modify a raw print queue (STR #3133)
        - Fixed a number of ppdi issues and added a unit test to validate that
	  ppdc + ppdi can generate and import the same data (STR #3152)
	- Moving jobs in the web interface now shows an error if you only have
	  one printer or class added (STR #3094)
	- Since classes have never truly supported the printer-error-policy
	  stuff added in CUPS 1.2, update the code to reflect the current
	  reality and support only the retry-current-job policy for now
	  (STR #3171)
	- Revised the password callback support (STR #2953)
	- ppdEmit*() did not choose between PageSize and PageRegion properly.
	- Make some fairly substantial changes to the Kerberos support code so
	  that CUPS can work in multi-realm environments and does not require
	  delegatable credentials.  Shared printing still requires delegation,
	  however "delegation by policy" can be enabled in the KDC to make this
	  all work.
	- "AccessLogLevel actions" did not hide client-error-not-found errors.
	- AP_FIRST_InputSlot did not work with number-up.
	- cupsBackChannelRead() and cupsBackChannelWrite() could fail due to a
	  lack of kernel buffers.
	- The IPP and LPD backends did not respond to side-channel requests
	  while copying print data to a temporary file.
	- cupsWriteRequestData() flushed the output buffer unnecessarily,
	  causing reduced performance in some situations.